# jira

./: .env.local  .gitignore  .token.pickle  Makefile  README.md  configuration.py  pyproject.toml  run.sh
analysis_output/: engineering_taxonomy.csv
src/: __init__.py
src/adapters/primary/cli/: commands.py  entry.py
src/adapters/primary/cli/jira/: __init__.py  jira_commands.py
src/adapters/primary/cli/jira_commands/: jira_commands.py
src/adapters/primary/cli/projects/: __init__.py  analytics_commands.py
src/adapters/secondary/jira/: __init__.py  jira_adapter.py  jira_factory.py  mappers.py  models.py  repository.py  transformer.py
src/adapters/secondary/visualization/: chart_generator.py
src/cli/: entry.py
src/cli/jira/: jira_commands.py
src/cli/projects/: analytics_commands.py
src/domain/: interfaces.py  jira_plan_service.py  models.py  task_service.py  team_analysis.py
src/domain/services/: analytics.py
src/lib/: __init__.py  configuration.py
src/service/: data_transformer.py  jira_factory.py  jira_service.py  sheets_service.py  task_service.py  team_analysis.py  visualization_service.py
src/templates/: __init__.py  visualization.py
tests/: __init__.py  conftest.py
tests/domain/: __init__.py  test_jira_factory.py
tests/fixtures/analysis_output/: engineering_taxonomy.csv
tests/integration/cli/: test_jira.py  test_projects.py
