[tool.poetry]
name = "jira-automation"
version = "0.1.0"
description = ""
authors = ["Bryan Eddy <bryan.eddy5@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]


[tool.poetry.dependencies]
python = "^3.11"
jira = "^3.8.0"
pytz = "^2024.2"
pydantic = "^2.10.5"
typer = "^0.15.1"
pydantic-settings = "^2.7.1"
ruff = "^0.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
