[tool.poetry]
name = "jira-automation"
version = "0.1.0"
description = ""
authors = ["Bryan Eddy <bryan.eddy5@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]


[tool.poetry.dependencies]
python = "^3.11"
jira = "^3.8.0"
pytz = "^2024.2"
pydantic = "^2.10.5"
typer = "^0.15.1"
pydantic-settings = "^2.7.1"
ruff = "^0.9.2"
polars = "^0.20.15"
plotly = "^5.20.0"
google-auth = "^2.38.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.159.0"

[tool.ruff]
select = ["ALL"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
