[tool.poetry]
name = "jira-automation"
version = "0.1.0"
description = ""
authors = ["Bryan Eddy <bryan.eddy5@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]


[tool.poetry.dependencies]
python = "^3.11"
jira = "^3.8.0"
pytz = "^2024.2"
pydantic = "^2.10.5"
typer = "^0.15.1"
pydantic-settings = "^2.7.1"
ruff = "^0.9.2"
polars = "^0.20.15"
plotly = "^5.20.0"
google-auth = "^2.38.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.159.0"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201", "COM812", "D100", "D203", "D213", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
